fix code horizontal scrolling

--- a/css/content.css
+++ b/css/content.css
@@ -48,3 +48,10 @@
 .footnote {
   font-size: x-small;
 }
+
+.content pre {
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: pre;
+  word-wrap: normal;
+}
